css i modifiaciones de la base

--- a/Geek-s-Den/www/G-S-D_base.html
+++ b/Geek-s-Den/www/G-S-D_base.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+<div id="encabezado">
 <h1>Geek's Den</h1>
+   <!--Tenemos que quitar los puntos, lluc i ian no lo saben hacer (no nos acordamos)-->	
    <!-- lo de class no me queda claro deberiamos modificarlo i en el ul si que le meteriamos-->	
 	<ul class="menu">
 		<li class="llista">Inici</li>
@@ -23,6 +25,19 @@
 		<!-- Aqui deberia salir una lista de los grupos que hay en el local-->
 		<li class="llista">Grups</li>
 	</ul>
+</div>
+<!--no me bajaba asi que he puesto esto-->	<div class="clear"></div>	
+<div id="login">
+	<fieldset>
+	  		<legend>Log In</legend>
+				Nombre de usuario<br/>
+					<input type="text" name="nombre" value="" maxlength="10" />
+				<br/>
+				Contraseña<br/>
+					<input type="password" name="password" value="" maxlength="10" />
+				<br/>
+	</fieldset>
+</div>
 	
 </body>
 
