--- a/Geek-s-Den/www/G-S-D_base.html
+++ b/Geek-s-Den/www/G-S-D_base.html
@@ -12,8 +12,8 @@
 <body>
 <div id="encabezado">
 <h1>Geek's Den</h1>
-   <!--Tenemos que quitar los puntos, lluc i ian no lo saben hacer (no nos acordamos)-->	
-   <!-- lo de class no me queda claro deberiamos modificarlo i en el ul si que le meteriamos-->	
+    <!-- lo de class no me queda claro deberiamos modificarlo i en el ul si que le meteriamos-->	
+    <!-- Cuando lo menimizamos el menu se aplasta-->
 	<ul class="menu">
 		<li class="llista">Inici</li>
 		<li class="llista">Galeria</li>
@@ -36,6 +36,9 @@
 				Contraseña<br/>
 					<input type="password" name="password" value="" maxlength="10" />
 				<br/>
+				<br/>
+					<input type="button" name="guardar" value="entra" />
+					<input type="reset" name="borrar" value="olvida" />
 	</fieldset>
 </div>
 	
