--- a/Geek-s-Den/www/gden.html
+++ b/Geek-s-Den/www/gden.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-	
+	<!--- Header ---->
+		<div class="headerButton">
+			<a href="/">
+				<p>
+					<img src="gdicon.png" />
+					T h e&nbsp;&nbsp;&nbsp; G e e k 's &nbsp;&nbsp;&nbsp;D e n
+				</p>
+			</a>
+		</div>
 </body>
 
 </html>
