imagen logo + modificacion html y css

--- a/Geek-s-Den/www/htlm(ian).html
+++ b/Geek-s-Den/www/htlm(ian).html
@@ -42,6 +42,11 @@
 				<input class="boton" type="submit" value="Registrate" />
 	</fieldset>
 </div>
+<div id="content"> 
+		<h1> New's</h1>
+	<iframe> Ahora mismo esta página esta en fase alfa!!</iframe>
+
+</div>
 	
 </body>
 
